Ajout des paramètres output_path, audio_quality et audio_format

--- a/playlist.ini
+++ b/playlist.ini
@@ -1,2 +1,10 @@
 [Music]
 test=PLivBbUaI8nnSU_k_y2WYVgX8H5SDJpFeX
+
+[Config]
+# default current directory
+output_path=
+# value between 0 (better) and 9 (worse), default 0
+audio_quality=
+# aac, vorbis, mp3, m4a, opus, or wav, mp3 by default
+audio_format=
